# RugPlay_Manager

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
crates/core/: Cargo.toml
crates/core/src/: lib.rs
crates/core/src/errors/: mod.rs
crates/core/src/models/: coin.rs  leaderboard.rs  market.rs  mod.rs  portfolio.rs  reward.rs  trade.rs  user.rs
crates/core/src/types/: mod.rs
crates/engine/: Cargo.toml
crates/engine/src/: lib.rs
crates/engine/src/executor/: mod.rs  queue.rs
crates/engine/src/risk/: limits.rs  mod.rs
crates/engine/src/strategies/: mirror.rs  mod.rs  sentinel.rs  sniper.rs
crates/networking/: Cargo.toml
crates/networking/src/: lib.rs
crates/networking/src/api/: mod.rs  trading.rs  user.rs
crates/networking/src/http/: client.rs  mod.rs
crates/networking/src/websocket/: mod.rs
crates/persistence/: Cargo.toml
crates/persistence/src/: lib.rs
crates/persistence/src/cache/: mod.rs
crates/persistence/src/encryption/: mod.rs
crates/persistence/src/sqlite/: connection.rs  mod.rs  profiles.rs  reputation.rs  sentinels.rs  transactions.rs  whales.rs
docs/: ARCHITECTURE.md  BUILDING.md  FEATURES.md  INSTALLATION.md  SECURITY.md
gui/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
gui/src/: App.tsx  index.css
gui/src-tauri/: Cargo.toml  tauri.conf.json
gui/src-tauri/icons/: icon.icns
gui/src-tauri/src/: dipbuyer.rs  dipbuyer_signals.rs  harvester.rs  lib.rs  main.rs  mirror.rs  mobile_app.js  mobile_dashboard.html  mobile_server.rs  notifications.rs  sentinel_eval.rs  sentinel_loop.rs  sniper.rs  state.rs  trade_executor.rs
gui/src-tauri/src/commands/: auth.rs  comments.rs  dipbuyer.rs  harvester.rs  history.rs  mirror.rs  mobile.rs  mod.rs  monitor.rs  notifications.rs  portfolio.rs  profiles.rs  research.rs  risk.rs  sentinel.rs  settings.rs  sniper.rs  trading.rs
gui/src/components/about/: AboutPage.tsx  DocViewer.tsx
gui/src/components/about/tabs/: BestSettingsTab.tsx  OverviewTab.tsx  ResearchInsightsTab.tsx
gui/src/components/auth/: AddProfile.tsx  ProfileSelect.tsx  TokenExpired.tsx
gui/src/components/automation/: AutomationLogPage.tsx  index.ts
gui/src/components/coin/: CoinDetailPage.tsx  index.ts
gui/src/components/dashboard/: ActivityFeed.tsx  DashboardHome.tsx  HarvesterWidget.tsx  ModuleStatusCard.tsx
gui/src/components/dipbuyer/: DipBuyerPage.tsx  index.ts
gui/src/components/feed/: LiveTrades.tsx  index.ts
gui/src/components/history/: TransactionHistory.tsx
gui/src/components/layout/: Dashboard.tsx  Header.tsx  NotificationInbox.tsx  Sidebar.tsx
gui/src/components/leaderboard/: LeaderboardPage.tsx
gui/src/components/market/: MarketBrowser.tsx
gui/src/components/mirror/: MirrorPage.tsx  index.ts
gui/src/components/mobile/: MobileAccessPage.tsx
gui/src/components/portfolio/: CoinDetailsModal.tsx  HoldingCard.tsx  HoldingsTable.tsx  PortfolioView.tsx  index.ts
gui/src/components/sentinel/: SentinelDetailModal.tsx  SentinelForm.tsx  SentinelManager.tsx  index.ts
gui/src/components/settings/: GeneralTab.tsx  MirrorTab.tsx  NotificationsTab.tsx  RiskTab.tsx  SentinelTab.tsx  SettingsLayout.tsx  SettingsPage.tsx  SniperTab.tsx  index.ts
gui/src/components/sniper/: SniperPage.tsx  index.ts
gui/src/components/trade/: TradeModal.tsx  index.ts
gui/src/components/ui/: FormattedInput.tsx
gui/src/components/user/: UserProfilePage.tsx
gui/src/hooks/: useResearch.ts  useUnsavedChanges.ts
gui/src/lib/: activityStore.ts  types.ts  utils.ts
