[package]
name = "rugplay-networking"
version.workspace = true
edition.workspace = true

[dependencies]
rugplay-core = { workspace = true }
rugplay-persistence = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
reqwest = { workspace = true }
tracing = { workspace = true }
