[package]
name = "rugplay-persistence"
version.workspace = true
edition.workspace = true

[dependencies]
rugplay-core = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
sqlx = { workspace = true }
chrono = { workspace = true }
aes-gcm = { workspace = true }
rand = { workspace = true }
argon2 = { workspace = true }
machine-uid = { workspace = true }
